# MiniDoc

./: IndicatorUsage.txt  Makefile.am  MarkerUsage.txt  MicroStyledTextCtrl.cpp  MicroStyledTextCtrl.h  MiniDoc.cbp  MiniDoc.cpp  MiniDoc.h  MiniDocConfigPanel.cpp  MiniDocConfigPanel.h  MiniDocConfigPanel.xrc  MiniDocPanel.cpp  MiniDocPanel.h  MiniDoc_unix.cbp  MiniDoc_wx30.cbp  MiniDoc_wx31_64.cbp  MiniStyledTextCtrl.cpp  MiniStyledTextCtrl.h  MiniStyledTextCtrlEvent.cpp  MiniStyledTextCtrlEvent.h  README.md  ToDo.txt  cbeditor.cpp.patch  manifest.xml
wxsmith/: MiniDocConfigPanel.wxs
